--- a/src/pyclts/consonants.html
+++ b/src/pyclts/consonants.html
@@ -409,5 +409,34 @@
         <td class="voiceless-glottal-lateral-tap" style="border:1px solid; border-left:none; background:#ccc"></td>
         <td class="voiced-glottal-lateral-tap" style="border:1px solid; border-left:none; background:#ccc"></td>
     </tr>
+    <tr>
+        <td style="font-size:75%; text-align:left; border:2px solid; border-width:0px 2px 1px 1px">Implosive</td>
+        <td class="voiceless-bilabial-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiced-bilabial-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiceless-labiodental-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiced-labiodental-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiceless-linguolabial-lateral-implosive"></td>
+        <td class="voiced-linguolabial-lateral-implosive"></td>
+        <td class="voiceless-dental-lateral-implosive"></td>
+        <td class="voiced-dental-lateral-implosive"></td>
+        <td class="voiceless-alveolar-lateral-implosive"></td>
+        <td class="voiced-alveolar-lateral-implosive"></td>
+        <td class="voiceless-postalveolar-lateral-implosive"></td>
+        <td class="voiced-postalveolar-lateral-implosive"></td>
+        <td class="voiceless-retroflex-lateral-implosive"></td>
+        <td class="voiced-retroflex-lateral-implosive"></td>
+        <td class="voiceless-alveolopalatal-lateral-implosive"></td>
+        <td class="voiced-alveolopalatal-lateral-implosive"></td>
+        <td class="voiceless-palatal-lateral-implosive"></td>
+        <td class="voiced-palatal-lateral-implosive"></td>
+        <td class="voiceless-velar-lateral-implosive"></td>
+        <td class="voiced-velar-lateral-implosive"></td>
+        <td class="voiceless-uvular-lateral-implosive"></td>
+        <td class="voiced-uvular-lateral-implosive"></td>
+        <td class="voiceless-epiglottal-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiced-epiglottal-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiceless-glottal-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+        <td class="voiced-glottal-lateral-implosive" style="border:1px solid; border-left:none; background:#ccc"></td>
+    </tr>
     </tbody>
 </table>
